# NIDE

./: .gitignore  ARQUITECTURA_NIDE.md  AUDIT.md  DECISIONS.md  LICENSE  README.md  run.sh  setup.sh
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/routes/: chart.py  comparison.py  decay.py  exfor.py  export.py  fission_yields.py  libraries.py  xs.py
backend/app/core/: comparison_engine.py  config.py  decay_service.py  derived_quantities.py  exfor_client.py  fission_yields.py  library_manager.py  nuclide_properties.py  xs_service.py
backend/app/models/: comparison.py  decay.py  xs.py
backend/nide/: __init__.py  api.py
backend/scripts/: download_data.py
backend/tests/: test_comparison_engine.py  test_downsampling.py  test_edge_cases.py  test_physics_validation.py  test_python_api.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: screenshot.mjs  test-chart-zoom.mjs  test-selection.mjs
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx  PlotlyChart.tsx  controls.tsx
frontend/src/components/ComparisonPanel/: ComparisonPanel.tsx
frontend/src/components/DecayChainGraph/: DecayChainGraph.tsx
frontend/src/components/ExportDialog/: ExportButtons.tsx
frontend/src/components/FissionYieldsView/: FissionYieldsView.tsx
frontend/src/components/NuclideChart/: NuclideChart.tsx
frontend/src/lib/: format.ts  plotly.ts
frontend/src/state/: SelectionContext.tsx
frontend/src/types/: plotly-dist.d.ts
(+1 files in other folders)
